tests/ui/consts/promotion-in-const-validation.stderr
error[E0080]: constructing invalid value: encountered a pointer, but expected an integer
  --> $DIR/promotion-in-const-validation.rs:3:29
   |
LL | const _: &usize = unsafe { &std::mem::transmute(foo as fn()) };
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

note: erroneous constant encountered
  --> $DIR/promotion-in-const-validation.rs:3:28
   |
LL | const _: &usize = unsafe { &std::mem::transmute(foo as fn()) };
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: constructing invalid value: encountered a pointer, but expected an integer
  --> $DIR/promotion-in-const-validation.rs:6:27
   |
LL | const _: usize = unsafe { std::mem::transmute(foo as fn()) };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
